Fixing some positions on mobile

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -32,7 +32,7 @@ $table-text-align: left !default;
 $content-width: 1100px !default;
 
 $on-palm: 600px !default;
-$on-laptop: 800px !default;
+$on-laptop: 1100px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
